--- a/pre-course proyect/css/quiz.css
+++ b/pre-course proyect/css/quiz.css
@@ -1,9 +1,8 @@
 /* -------- Principal styles -------- */
 
-.progressBar {
+.progressBars {
     position: relative;
     width: 100%;
-    height: 25px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -27,23 +26,94 @@
     left: 3px;
 }
 
-progress {
+.htmlProgress {
     position: relative;
-    width: 45px;
-    height: 25px;
+    width: 50px;
+    height: 1em;
+    background-color:  rgba(77, 127, 207, 0.16);
+    border-radius: .5em;
+    color: black;
     left: 5px;
 }
 
+.htmlProgress:before {
+    content: attr(data-html-lable);
+    font-size: .8em;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: .18em;
+    top: .18em;
+    bottom: .18em;
+    width: calc(var(--width, 0) * 1%);
+    min-width: 0;
+    max-width: calc(100% - 0.33em);
+    background-color: rgba(37, 100, 218, .7);
+    border-radius: .33em;
+    padding: 8px 0 0 0; 
+}
+
+.cssProgress {
+    position: relative;
+    width: 50px;
+    height: 1em;
+    background-color:  rgba(77, 127, 207, 0.16);
+    border-radius: .5em;
+    color: black;
+    left: 5px;
+}
+
+.cssProgress::before {
+    content: attr(data-css-lable);
+    font-size: .8em;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: .18em;
+    top: .18em;
+    bottom: .18em;
+    width: calc(var(--width, 0) * 1%);
+    min-width: 0;
+    max-width: calc(100% - 0.33em);
+    background-color: rgba(37, 100, 218, .7);
+    border-radius: .33em;
+    padding: 8px 0 0 0;
+}
+
+.jsProgress {
+    position: relative;
+    width: 50px;
+    height: 1em;
+    background-color:  rgba(77, 127, 207, 0.16);
+    border-radius: .5em;
+    color: black;
+    left: 5px;
+}
+
+.jsProgress::before {
+    content: attr(data-js-lable);
+    font-size: .8em;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: .18em;
+    top: .18em;
+    bottom: .18em;
+    width: calc(var(--width, 0) * 1%);
+    min-width: 0;
+    max-width: calc(100% - 0.33em);
+    background-color: rgba(37, 100, 218, .7);
+    border-radius: .33em;
+    padding: 8px 0 0 0;
+}
+
 main {
-    background-color: rgba(77, 127, 207, 0.205);
     position: relative;
     width: 240px;
     height: 400px;
-    border: 2px solid rgba(0, 0, 0, .1);
     margin: 45px auto;
     display: block;
     border-radius: 8px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, .3);
 }
 
 h2 {
@@ -112,7 +182,8 @@ select {
     left: 5px;
     font-family: "kumbh", sans-serif;
     font-size: 1em;
-    max-width: 230px;
+    max-width: 730px;
+    width: 190px;
     height: 30px;
     border-radius: 10px;
     background-color:  rgba(77, 127, 207, 0.205);
@@ -149,6 +220,7 @@ option {
     
     .progressLabel {
         height: 25px;
+        left: 0;
     }
 
     .progressLabelTitle {
@@ -156,10 +228,37 @@ option {
         left: 3px;
     }
 
-    progress {
-        height: 45px;
-        width: 95px;
-        left: 20px;
+    .htmlProgress {
+       width: 80px;
+       height: 1.5em;
+       left: 0; 
+    }
+    
+    .htmlProgress::before {
+        font-size: 1.2em;
+        padding: 12px 0 0 0;
+    }
+    
+    .cssProgress {
+        width: 80px;
+        height: 1.5em;
+        left: 0;  
+    }
+    
+    .cssProgress::before {
+        font-size: 1.2em;
+        padding: 12px 0 0 0;
+    }
+    
+    .jsProgress {
+        width: 80px;
+        height: 1.5em;
+        left: 0;
+    }
+
+    .jsProgress::before {
+        font-size: 1.2em;
+        padding: 12px 0 0 0;
     }
 
     main {
@@ -200,6 +299,7 @@ option {
         font-size: 1.2em;
         height: 35px;
         max-width: 400px;
+        width: 260px;
     }
 }
 
@@ -210,6 +310,7 @@ option {
     
     .progressLabel {
         height: 40px;
+        left: 5px;
     }
 
     .progressLabelTitle {
@@ -218,11 +319,38 @@ option {
         left: 4px;
     }
 
-    progress {
-        height: 65px;
-        width: 155px;
-        left: 40px;
-    }
+    .htmlProgress {
+        width: 130px;
+        height: 2em;
+        left: 5px; 
+     }
+     
+     .htmlProgress::before {
+        font-size: 1.5em;
+        padding: 14px 0 0 0;
+     }
+     
+     .cssProgress {
+        width: 130px;
+        height: 2em;
+        left: 5px;  
+     }
+     
+     .cssProgress::before {
+        font-size: 1.5em;
+        padding: 14px 0 0 0;
+     }
+     
+     .jsProgress {
+        width: 130px;
+        height: 2em;
+        left: 5px; 
+     }
+ 
+     .jsProgress::before {
+        font-size: 1.5em;
+        padding: 14px 0 0 0;
+     }
 
     main {
         width: 640px;
@@ -254,12 +382,138 @@ option {
         left: 40px;
         font-size: 1.5em;
         height: 40px;
+        width: 300px;
         max-width: 560px;
     }
 }
 
-@media (min-height: 750px){
+@media (min-width: 2049px){
+    .progressLabel {
+        height: 100px;
+        width: 150px;
+        left: 5px;
+    }
+
+    .progressLabelTitle {
+        font-size: 2.5em;
+        top: 30px;
+        left: 14px;
+    }
+
+    .htmlProgress {
+        width: 350px;
+        height: 4em;
+        left: 5px; 
+     }
+     
+     .htmlProgress::before {
+        font-size: 2.5em;
+        padding: 20px 0 0 0;
+     }
+     
+     .cssProgress {
+        width: 350px;
+        height: 4em;
+        left: 5px;  
+     }
+     
+     .cssProgress::before {
+        font-size: 2.5em;
+        padding: 20px 0 0 0;
+     }
+     
+     .jsProgress {
+        width: 350px;
+        height: 4em;
+        left: 5px;
+     }
+ 
+     .jsProgress::before {
+        font-size: 2.5em;
+        padding: 20px 0 0 0;
+     }
+
     main {
-        height: 711px;
+        width: 2000px;
+    }
+
+    h2 {
+        font-size: 3.5em;
+        top: 40px;
+        left: 40px;
+        width: 2000px;
+    }
+
+    input {
+        top: 60px;
+        left: 40px;
+        width: 40px;
+        height: 40px;
+    }
+
+    label {
+        top: 58px;
+        left: 40px;
+    }
+    
+    li>label {
+        font-size: 3.5em;
+        margin: 30px 0 30px 0;
+    }
+
+    button {
+        bottom: 440px;
+        right: 40px;
+        width: 350px;
+        height: 2em;
+        font-size: 3.5em;
+    }
+
+    select {
+        top: 60px;
+        left: 40px;
+        font-size: 1.5em;
+        height: 100px;
+        width: 730px;
+        max-width: 560px; 
+    }
+}
+
+@media (min-height: 522px){
+    main {
+        height: 460px;
+    }
+}
+
+@media (min-height: 721px){
+    main {
+        height: 597px;
+    }
+}
+
+@media (min-height: 1081px){
+    main {
+        height: 1690px;
+    }
+}
+
+
+/* -------- Animation styles --------*/
+
+@keyframes questionAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes questionAnimation2 {
+    from {
+        transform: scale(.1);
+    }
+    to {
+        transform: scale(1);
     }
 }
